--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ias",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,5 +13,10 @@
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "less": "^2.7.2",
+    "through2": "^2.0.3"
   }
 }
