--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "ias",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./express/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8",
     "less": "^2.7.2",
+    "pug": "^2.0.0-rc.1",
     "through2": "^2.0.3"
   }
 }
