--- a/express/package.json
+++ b/express/package.json
@@ -5,7 +5,11 @@
     "debug": "~2.6.3",
     "express": "^4.15.2",
     "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "less": "^2.7.2",
+    "mkdirp": "^0.5.1",
+    "pug": "^2.0.0-rc.1"
   }
 }
