--- a/express/package.json
+++ b/express/package.json
@@ -2,10 +2,7 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "^4.15.2",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "less": "^2.7.2",
