--- a/express/package.json
+++ b/express/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "body-parser": "~1.17.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "less": "^2.7.2",
