--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ias",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "private": true,
   "scripts": {
     "start": "node ./express/www"
   },
   "dependencies": {
     "express": "^4.15.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
