--- a/express/package.json
+++ b/express/package.json
@@ -4,6 +4,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "express": "^4.15.2",
+    "mysql": "^2.13.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   },
