--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ias",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "private": true,
   "scripts": {
-    "start": "node ./express/www"
+    "start": "node ias-cli"
   },
   "dependencies": {
+    "cross-spawn": "^5.1.0",
     "express": "^4.15.2",
     "mysql": "^2.13.0",
     "passport-facebook": "^2.1.1",
