--- a/express/package.json
+++ b/express/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.3.0",
     "cookie-parser": "~1.4.3",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "ioredis": "^2.5.0",
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
