--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ias",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "private": true,
   "scripts": {
     "start": "node ias-cli"
@@ -8,6 +8,7 @@
   "dependencies": {
     "cross-spawn": "^5.1.0",
     "express": "^4.15.2",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0"
