--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ias",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "private": true,
   "scripts": {
     "start": "node ias-cli"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "cross-spawn": "^5.1.0",
     "express": "^4.15.2",
     "multer": "^1.3.0",
