--- a/express/package.json
+++ b/express/package.json
@@ -4,12 +4,14 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.3.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "ioredis": "^2.5.0",
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.0.1"
   },
   "devDependencies": {
     "less": "^2.7.2",
